<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">Team A</string>
    <string name="default_points">0</string>
    <string name="threePoints">+3 Points</string>
    <string name="twoPoints">+2 Points</string>
    <string name="freeThrow">Free Throw</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main9">MainActivity9</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="teamB">Team B</string>
    <string name="reset">Reset Game</string>
</resources>
