<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.udacity.androidbasics.tomazmartins.courtcounter.MainActivity">

    <TextView
        android:id="@+id/teamA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:gravity="center"
        android:text="@string/teamA" />

    <TextView
        android:id="@+id/points_teamA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:gravity="center"
        android:text="@string/default_points"/>

    <Button
        android:id="@+id/btn_threePoints_teamA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:gravity="center"
        android:text="@string/threePoints"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_twoPoints_teamA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:gravity="center"
        android:text="@string/twoPoints"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btn_freeThrow_teamA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_padding"
        android:gravity="center"
        android:text="@string/freeThrow"
        android:textAllCaps="true" />

</LinearLayout>
